objects/Doctor__c.object
<CustomObject>
    <fields>
        <fullName>department__c</fullName>
        <label>department</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Gynechology</fullName>
                </value>
                <value>
                    <fullName>optimalogy</fullName>
                </value>
                <value>
                    <fullName>dermotology</fullName>
                </value>
                <value>
                    <fullName>cardiology</fullName>
                </value>
                <value>
                    <fullName>orthopedic</fullName>
                </value>
                <value>
                    <fullName>psychology</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>doctor_id__c</fullName>
        <displayFormat>d-{0000}</displayFormat>
        <externalId>true</externalId>
        <label>doctor id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>doctor_s_patient__c</fullName>
        <label>doctor&apos;s patient</label>
        <referenceTo>Patient__c</referenceTo>
        <relationshipLabel>Doctors</relationshipLabel>
        <relationshipName>Doctors</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Doctor</label>
    <nameField>
        <label>Doctor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Doctors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>